--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,6 @@ a {
     justify-content: center;
 }
 
-.container-hero-left {
-
-}
-
-.container-hero-right {
-
-}
-
 .color-dark {
     background-color: #1F2937;
 }
@@ -47,19 +39,26 @@ a {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    margin: 0;
 }
 
 .text-hero-secondary {
     font-size: 18px;
     color: #E5E7EB;
+    font-weight: 300;
+    margin: 0;
+    
 }
 
 .text-header-logo {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: 500;
 }
 
 .text-information-header {
+    display: flex;
+    justify-content: center;
     font-size: 36px;
     font-weight: 600;
     color: #1F2937
@@ -82,6 +81,7 @@ a {
     align-items: center;
     max-width: 1000px;
     height: 75px;
+    padding-bottom: 96px;
 }
 
 .header-logo {
@@ -95,77 +95,59 @@ a {
     gap: 16px;
 }
 
-/* Font CSS */
+/* Hero Section Styling */
 
-.roboto-thin {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  .roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  .roboto-thin-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-style: italic;
-  }
-  
-  .roboto-light-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: italic;
-  }
-  
-  .roboto-regular-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: italic;
-  }
-  
-  .roboto-medium-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: italic;
-  }
-  
-  .roboto-bold-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: italic;
-  }
-  
-  .roboto-black-italic {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: italic;
-  }
-  
+.hero {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1000px;
+  align-items: flex-start;
+  padding-bottom: 96px;
+}
+
+.container-hero-left {
+  padding-right: 96px;
+
+}
+
+.container-hero-right {
+
+}
+
+.hero-button {
+  border-radius: 8px;
+  height: 32px;
+  width: 112px;
+  border: none;
+  color:#F9FAF8;
+  margin-top: 16px;
+}
+
+/* Some General Information Styling */
+
+.information-img {
+  border: 3px solid #3882F6;
+  border-radius: 16px;
+  padding: 8 0 8 0;
+  width: 150px;
+  height: 150px;
+}
+
+.information-text {
+  width: 150px;
+  height: 150px;
+  margin: 0;
+  text-align: center;
+}
+
+.information-box {
+  display: flex;
+  flex-direction: row;
+}
+
+.information-box-container {
+  padding: 0 24px 0 24px;
+}
