--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,22 @@ a {
   padding-right: 38px;
 }
 
+.text-cta-bold {
+  font-size: 24px;
+  color: #F9FAF8;
+  font-weight: 900;
+  padding-left: 96px;
+  margin: 0;
+}
+
+.text-cta-regular {
+  font-size: 16px;
+  color: #F9FAF8;
+  font-weight: 300;
+  padding-left: 96px;
+  margin: 0;
+}
+
 /* Header Section Styling */
 
 .header {
@@ -171,4 +187,30 @@ a {
 .quote-container {
   padding-bottom: 96px;
   padding-top: 96px;
+}
+
+/* CTA Styling */
+
+.cta-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 1;
+  justify-content: space-between;
+  padding: 46px;
+  margin: 96px;
+  max-width: 1000px;
+  border-radius: 16px;
+}
+
+.cta-button {
+  background-color: #3882F6;
+  border-radius: 8px;
+  color: #F9FAF8;
+  border: 2px solid #F9FAF8;
+  padding: 8px 24px 8px 24px;
+}
+
+.cta-button-container {
+  padding-right: 96px;
 }
