--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,11 @@ a {
   margin: 0;
 }
 
+.text-footer {
+  font-size: 16px;
+  color: #F9FAF8;
+  font-weight: 100;
+}
 /* Header Section Styling */
 
 .header {
